# presslint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
crates/presslint/: Cargo.toml  JOURNAL-archive.md  JOURNAL.md
crates/presslint-actions/: Cargo.toml  JOURNAL.md
crates/presslint-actions/benches/: actions.rs
crates/presslint-actions/src/: incremental_revision.rs  lib.rs  patch.rs  tests.rs
crates/presslint-actions/src/tests/: incremental_revision.rs  patch_boundary.rs
crates/presslint-cli/: Cargo.toml  JOURNAL.md
crates/presslint-cli/src/: args.rs  audit.rs  convert.rs  error.rs  main.rs  report.rs  tests.rs
crates/presslint-cli/src/tests/: convert.rs  pages.rs  report.rs  select.rs  timing.rs
crates/presslint-color/: Cargo.toml  JOURNAL.md
crates/presslint-color-lcms/: Cargo.toml  JOURNAL.md
crates/presslint-color-lcms/src/: engine.rs  lib.rs
crates/presslint-color-lcms/tests/: device_link.rs  engine.rs
crates/presslint-color/src/: engine.rs  lib.rs  tests.rs  transform_cache.rs
crates/presslint-color/src/tests/: devicelink.rs  engine.rs  json.rs  spot.rs  transform_cache.rs
crates/presslint-core/: Cargo.toml
crates/presslint-core/src/: lib.rs
crates/presslint-inventory/: Cargo.toml  JOURNAL.md
crates/presslint-inventory/benches/: inventory.rs
crates/presslint-inventory/src/: color_space_env.rs  digest.rs  inventory.rs  lib.rs  tests.rs
crates/presslint-inventory/src/tests/: bit_identity.rs  combined.rs  extgstate.rs  font_identity.rs  resource_color.rs  serde_shape.rs  xobject.rs
crates/presslint-paint/: Cargo.toml  JOURNAL.md
crates/presslint-paint/src/: call_machine.rs  color_space_env.rs  extgstate_env.rs  flat_projection.rs  font_env.rs  lib.rs  mutation_class.rs  operands.rs  paint_program.rs  provenance.rs  tests.rs  walker.rs
crates/presslint-paint/src/tests/: call_machine.rs  extgstate_env.rs  font_env.rs  font_state.rs  mini_json.rs  mutation_class.rs  paint_program.rs  provenance.rs  walker.rs
crates/presslint-pdf/: Cargo.toml  JOURNAL-archive-2.md  JOURNAL-archive-3.md  JOURNAL-archive-4.md  JOURNAL-archive.md  JOURNAL.md
crates/presslint-pdf/src/: catalog_pages.rs  content_stream_extent.rs  decode_parms.rs  default_color_spaces.rs  dictionary_entries.rs  dictionary_extent.rs  document_access.rs  document_page_content_extents.rs  extgstate_classify.rs  font_classify.rs  form_color_space_resources.rs  form_extgstate_resources.rs  form_font_resources.rs  form_transparency_group.rs  form_xobject_resources.rs  icc_profile.rs  image_xobject.rs  lib.rs  object_body_references.rs  object_consumer_index.rs  object_dictionary.rs  object_header.rs  object_lookup.rs  object_resolver.rs  object_stream.rs  output_intents.rs  page_boxes.rs  page_color_space_classify.rs  page_color_space_resources.rs  page_content_extents.rs  page_content_targets.rs  page_contents.rs  page_contents_resolved.rs  page_extgstate_resources.rs  page_font_resources.rs  page_transparency_group.rs  page_tree_kid_targets.rs  page_tree_kids.rs  page_tree_leaves.rs  page_tree_node.rs  (+15 more)
crates/presslint-pdf/src/object_consumer_index/: traversal.rs
crates/presslint-pdf/src/page_xobject_binding/: walk.rs
crates/presslint-pdf/src/tests/: catalog_pages.rs  decode_parms.rs  default_color_spaces.rs  dictionary_entries.rs  dictionary_extent.rs  document_access.rs  document_access_object_streams.rs  document_page_content_extents.rs  extgstate_classify.rs  (+35 more)
crates/presslint-selectors/: Cargo.toml  JOURNAL.md
crates/presslint-selectors/src/: lib.rs  tests.rs
crates/presslint-selectors/src/tests/: component_compare.rs  json.rs
crates/presslint-syntax/: Cargo.toml
crates/presslint-syntax/src/: lib.rs
crates/presslint-types/: JOURNAL.md
crates/presslint-types/src/: lib.rs
crates/presslint-write/: Cargo.toml  JOURNAL-archive-2.md  JOURNAL-archive.md  JOURNAL.md
crates/presslint-write/src/: alias_epoch_plan.rs  black_preservation.rs  content_color_convert.rs  content_color_rewrite.rs  content_edit_pipeline.rs  content_object_ownership.rs  content_sequence_pipeline.rs  content_stream_plan.rs  extgstate_guard.rs  extgstate_page_guard.rs  form_clone_set_plan.rs  form_xobject_effect.rs  fresh_objects.rs  lib.rs  link_routing.rs  page_box_serialize.rs  page_boxes.rs  page_content_sequence.rs  page_device_space_policy.rs  page_font_policy.rs  page_xobject_policy.rs  parsed_content.rs  pdf_number_serialize.rs  planned.rs  reencode_content.rs  selector_match.rs  stream_object_body.rs  tests.rs  writer.rs  xref_stream_writer.rs
crates/presslint-write/src/form_clone_set_plan/: commit.rs  export.rs  walk.rs
crates/presslint-write/src/form_xobject_effect/: color.rs  extgstate.rs  recurse.rs  refusal.rs  xobjects.rs
crates/presslint-write/src/tests/: alias_epoch_convert.rs  alias_epoch_font.rs  alias_epoch_form.rs  alias_epoch_form_color_resources.rs  alias_epoch_form_extgstate.rs  alias_epoch_form_recursion.rs  alias_epoch_form_xobjects.rs  alias_epoch_plan.rs  alias_epoch_xobject.rs  append.rs  content_color_convert.rs  content_color_convert_malformed.rs  content_color_convert_multistream.rs  content_color_convert_paint_adapter.rs  content_color_convert_resource_space.rs  content_color_rewrite.rs  content_object_ownership.rs  extgstate_guard.rs  extgstate_page_guard.rs  form_clone_commit.rs  form_clone_export.rs  form_clone_set_plan.rs  fresh_objects.rs  fresh_objects_floor.rs  link_routing.rs  page_boxes.rs  page_boxes_xref_stream.rs  page_content_sequence.rs  page_device_space_policy.rs  planned.rs  reencode_content.rs  reject.rs  selector_match.rs  selector_match_paint_adapter.rs  xref_stream_writer.rs
crates/presslint/src/: color_audit.rs  color_environment.rs  default_color_space_findings.rs  document_inventory.rs  form_expansion_machine.rs  form_inventory.rs  graphics_state_findings.rs  icc_based_findings.rs  lib.rs  pdf_inventory.rs  pdf_query.rs  preflight.rs  tests.rs
docs/: architecture.md  design-principles.md  inventory-selectors-actions.md  mutation-boundary-contract.md  status.md
scripts/: ci_check.sh
(+30 files in other folders)
