[workspace]
resolver = "3"
members = [
    "crates/presslint",
    "crates/presslint-types",
    "crates/presslint-pdf",
    "crates/presslint-syntax",
    "crates/presslint-inventory",
    "crates/presslint-selectors",
    "crates/presslint-actions",
    "crates/presslint-color",
    "crates/presslint-color-lcms",
    "crates/presslint-write",
    "crates/presslint-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.87"
authors = ["Lorenzo Battiston and presslint contributors"]
license = "Apache-2.0"
description = "Programmable PDF prepress core."
readme = "README.md"
keywords = ["pdf", "prepress", "color", "icc"]
categories = ["graphics", "multimedia", "parser-implementations"]

[workspace.dependencies]
presslint = { path = "crates/presslint", version = "0.0.1" }
presslint-types = { path = "crates/presslint-types", version = "0.0.1" }
presslint-pdf = { path = "crates/presslint-pdf", version = "0.0.1" }
presslint-syntax = { path = "crates/presslint-syntax", version = "0.0.1" }
presslint-inventory = { path = "crates/presslint-inventory", version = "0.0.1" }
presslint-selectors = { path = "crates/presslint-selectors", version = "0.0.1" }
presslint-actions = { path = "crates/presslint-actions", version = "0.0.1" }
presslint-color = { path = "crates/presslint-color", version = "0.0.1" }
presslint-color-lcms = { path = "crates/presslint-color-lcms", version = "0.0.1" }
presslint-write = { path = "crates/presslint-write", version = "0.0.1" }

clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
criterion = { version = "0.5", default-features = false }
miniz_oxide = { version = "=0.9.1", default-features = false, features = ["with-alloc"] }
# Little CMS 2 FFI (MIT; wraps Little CMS, MIT). Pinned EXACT because an lcms2
# patch bump can shift CMYK output by a few digital counts, which would break the
# determinism invariant. `default-features = false` plus `static` forces the
# bundled Little CMS C source to be compiled with `cc` (bypassing pkg-config /
# any system lcms2), so output is reproducible across build hosts, AND drops the
# `parallel`/`dynamic` default features whose transitive deps (jobserver ->
# getrandom -> r-efi/wasip2/wit-bindgen) carry LGPL / LLVM-exception licences the
# `check_licenses.sh` gate forbids. Cargo cannot subtract a feature enabled by an
# intermediate crate, so the safe `lcms2` wrapper (which pulls `lcms2-sys` with
# its defaults) cannot be used without failing the gate — hence the raw FFI here.
# Used only by `presslint-color-lcms`, which isolates the C dependency and all
# `unsafe` away from the pure-Rust `presslint-color`.
lcms2-sys = { version = "=4.0.7", default-features = false, features = ["static"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
