[package]
name = "presslint-paint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Graphics-state walker and paint-program spine for presslint."

[dependencies]
presslint-types.workspace = true
presslint-syntax.workspace = true
serde.workspace = true

[lints]
workspace = true
