[package]
name = "presslint-selectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Serializable selector DSL for presslint-core inventory entries."

[dependencies]
presslint-core.workspace = true
presslint-inventory.workspace = true
serde.workspace = true

[lints]
workspace = true

